# claude-cowork-lint

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  biome.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.test.json  vitest.config.ts
.changeset/: README.md  config.json  initial-public-release.md
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  watch-claude-release.yml
_legacy/python/cwlint/: __init__.py  discovery.py  findings.py  suppression.py
_legacy/python/scripts/: sync_contracts.py
commands/: cwlint-check.md
contracts/: cowork-latest.json  cowork-v1.6608.2.json  cowork-v2.1.121.json
docs/: CLI.md  RULES.md  SPEC-EXTRACTION.md  SPEC.md
docs/internal/: CONTRACT-AUDIT-1.6608.2.md  FRONTMATTER-FIELDS-AUDIT.md  RETROSPECTIVE.md  ROADMAP.md  SPEC.md
schemas/: v0.json
scripts/: check-for-new-release.ts  check_for_new_release.py
skills/claude-cowork-lint/: SKILL.md
src/: _hook.ts  about.ts  cli.ts  diff.ts  discovery.ts  doctor.ts  engine.ts  findings.ts  frontmatter.ts  index.ts  rules.ts  spec.ts  suppression.ts
src/cwlint/: __init__.py  cli.py  diff.py  engine.py  spec.py
src/cwlint/extractors/: __init__.py  _base.py  _jsutil.py  host_loop.py  kernel_env_allowlist.py  subagent_filter.py
src/cwlint/output/: __init__.py  sarif.py
src/cwlint/rules/: _helpers.py  cw002_no_persistence_path.py  cw005_missing_user_invocable.py  cw006_unknown_tool_name.py  cw009_mcp_dependency.py  cw010_user_secret_name.py  cw011_plugin_hooks.py  cw012_broken_hook_events.py
src/extractors/: _ast.ts  host-loop.ts  index.ts  kernel-env-allowlist.ts  secret-unset-list.ts  subagent-filter.ts
src/output/: json.ts  sarif.ts  text.ts
src/rules/: _helpers.ts  _meta.ts  cw001.ts  cw002.ts  cw003.ts  cw004.ts  cw005.ts  cw006.ts  cw008.ts  cw009.ts  cw010.ts  cw011.ts  cw012.ts  index.ts
test/: helpers.ts
test/fixtures/bundles/: synthetic-ambiguous.js
test/fixtures/dogfood/: README.md  agents-with-shorthand-tools.md  clean-skill.md  (+4 more)
test/integration/: anthropic-issues.test.ts  check-clean-repo.test.ts  check-known-bad-repo.test.ts  cli.test.ts  dogfood-corpus.test.ts  text-output-snapshot.test.ts  watcher.test.ts
test/unit/: _hook.test.ts  _legacy-port.test.ts  diff.test.ts  discovery.test.ts  doctor.test.ts  engine.test.ts  extractors.test.ts  findings.test.ts  frontmatter.test.ts  import-boundaries.test.ts  output.test.ts  schema-lock.test.ts  spec-schema.test.ts  spec.test.ts  suppression.test.ts
tests/: conftest.py
tests/integration/: test_anthropic_issues.py  test_check_clean_repo.py  test_check_known_bad_repo.py  test_cli.py
tests/unit/: test_contracts_sync.py  test_diff.py  test_discovery.py  test_engine.py  test_extractors.py  test_findings.py  test_import_boundaries.py  test_schema_lock.py  test_smoke.py  test_spec_loader.py  test_spec_schema.py  test_suppression.py
(+29 files in other folders)
