[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "claude-cowork-lint"
dynamic = ["version"]
description = "Validate skill/plugin/agent repos against the Claude Cowork runtime contract."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Yaniv Golan", email = "yaniv@lool.vc" }]
keywords = [
    "claude", "claude-cowork", "operon", "skill", "plugin",
    "linter", "contract", "static-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12,<1",
    "pydantic>=2.7,<3",
    "pyyaml>=6.0,<7",
    "rich>=13.7,<15",
]

[project.urls]
Homepage = "https://github.com/yaniv-golan/claude-cowork-lint"
Issues = "https://github.com/yaniv-golan/claude-cowork-lint/issues"
Changelog = "https://github.com/yaniv-golan/claude-cowork-lint/blob/main/CHANGELOG.md"

[project.scripts]
claude-cowork-lint = "cwlint.cli:app"
cwlint = "cwlint.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
    "pre-commit>=3.7,<5",
    "types-PyYAML",
    "jsonschema>=4.23,<5",
]

[tool.hatch.version]
path = "src/cwlint/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cwlint"]

[tool.hatch.build.targets.sdist]
include = ["src/", "contracts/", "schemas/", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
    "TCH",
    "PTH",
    "RET",
    "ARG",
    "C4",
    "PIE",
    "PL",
]
ignore = [
    "PLR0913",
    "PLR0911",
    "PLR0912",
    "PLR0915",
    "PLC0415",  # function-local imports legitimately used for lazy loading + test setup
    "TC003",    # pydantic models need runtime-resolvable type annotations
    "RUF002",   # docstring math symbols (∖, ∪, –) are intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101", "ARG001", "ARG002"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["jsonschema", "jsonschema.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: integration tests that build synthetic skill repos under tmp_path",
]

[tool.coverage.run]
branch = true
source = ["cwlint"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
